# file-peeker

./: .gitignore  Cargo.toml  Makefile  NOTICE  README.md  vscode.md
.github/workflows/: ci.yml
crates/file-peeker-client/: Cargo.toml  uniffi.toml
crates/file-peeker-client/src/: api.rs  client.rs  install.rs  lib.rs  listing.rs  main.rs  opener.rs  remote_server_install.rs  session.rs  startup.rs  state.rs  tree.rs
crates/file-peeker-client/src/cli/: connect.rs  install-server-from-source.sh  install.rs  list.rs  mod.rs  open.rs  ssh_connection.rs  start_server.rs  walk.rs
crates/file-peeker-client/src/connection/: common.rs  ensure-server.sh  local.rs  mod.rs  remote.rs
crates/file-peeker-client/src/install/: mod.rs  remote-install.sh
crates/file-peeker-client/src/ops/: current_root.rs  list.rs  list_uniffi.rs  mod.rs  open.rs
crates/file-peeker-client/src/server/: common.rs  ensure-server.sh  local.rs  mod.rs  remote-launch.sh  remote.rs  ssh.rs
crates/file-peeker-client/src/session/: mod.rs  path.rs
crates/file-peeker-client/src/session/backend/: error.rs  local.rs  mod.rs
crates/file-peeker-client/src/session/backend/connection/: mod.rs  remote.rs
crates/file-peeker-client/src/session/backend/remote/: entry.rs  error.rs  list_dir.rs  mod.rs  read_file.rs  resolve_path.rs  walk_dir.rs
crates/file-peeker-client/src/session/directory/: list.rs  mod.rs  walk.rs
crates/file-peeker-client/src/session/ffi/: listing.rs  mod.rs
crates/file-peeker-client/src/session/file/: mod.rs  open.rs  opener.rs  service.rs  stage.rs
crates/file-peeker-client/src/startup/: diagnostics.rs  local.rs  mod.rs  protocol.rs  remote.rs  runtime.rs
crates/file-peeker-client/tests/: local_server.rs
crates/file-peeker-core/: Cargo.toml
crates/file-peeker-core/src/: error.rs  fs_service.rs  lib.rs  read.rs  resolve_path.rs
crates/file-peeker-core/src/directory/: entry.rs  list.rs  mod.rs  walk.rs
crates/file-peeker-host/: Cargo.toml
crates/file-peeker-host/src/: main.rs
crates/file-peeker-protocol/: Cargo.toml
crates/file-peeker-protocol/proto/: file_peeker.proto
crates/file-peeker-protocol/src/: io.rs  lib.rs
crates/file-peeker-server/: Cargo.toml  build.rs
crates/file-peeker-server/proto/: file_peeker.proto
crates/file-peeker-server/src/: lib.rs  main.rs  server.rs  utils.rs
crates/file-peeker-server/src/ops/: current_root.rs  entry.rs  list.rs  mod.rs  read.rs  status.rs  walk.rs
crates/file-peeker-tui/: Cargo.toml
crates/file-peeker-tui/src/: browser_context.rs  main.rs
crates/file-peeker-tui/src/app/: mod.rs  view.rs
docs/: README.md  api.md  architecture.md  client-cli.md  code-structure.md  protocol.md  session-lifecycle.md  startup-routine-plan.md  startup.md  state-ownership.md  tui.md
docs/operations/: open-file.md
scripts/: bundle-swift-server.sh  check-docs.sh  run-app.sh  run-client-cli.sh  run-server.sh  run-tui.sh  test-local-client-server.sh  test-local-tui.sh  test-remote-server-install.sh
swift/: project.yml
swift/App/: BrowserModel.swift  ContentView.swift  FilePeekerApp.swift
swift/ClientIntegrationTests/: main.swift
tools/uniffi-bindgen/: Cargo.toml
