[workspace]
members = [
    "crates/file-peeker-client",
    "crates/file-peeker-protocol",
    "crates/file-peeker-server",
    "crates/file-peeker-tui",
    "tools/uniffi-bindgen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
getrandom = "0.3.3"
futures = "0.3.33"
hyper-util = { version = "0.1.17", features = ["tokio"] }
prost = "0.14.4"
ratatui = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.27.0"
thiserror = "2.0.12"
tokio = { version = "1.52.4", features = [
    "fs",
    "io-util",
    "io-std",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { version = "0.14.6", features = ["transport"] }
tonic-health = "0.14.6"
tonic-prost = "0.14.6"
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = "0.7.16"
tower = "0.5.2"
uniffi = "=0.31.2"
uuid = { version = "1.24.0", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
