[package]
name = "file-peeker-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
clap.workspace = true
file-peeker-protocol = { version = "=0.1.0", path = "../file-peeker-protocol" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi = { workspace = true, features = ["tokio"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "file-peeker-client"
path = "src/main.rs"

[lints]
workspace = true
