[package]
name = "file-peeker-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
dirs.workspace = true
file-peeker-core.workspace = true
file-peeker-server.workspace = true
futures.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uniffi = { workspace = true, features = ["tokio"] }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "file-peeker-client"
path = "src/main.rs"

[lints]
workspace = true
