[package]
name = "file-peeker-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
