[package]
name = "file-peeker-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
prost-build = "0.14.4"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"

[lints]
workspace = true
