[package]
name = "file-peeker-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
file-peeker-core.workspace = true
futures.workspace = true
getrandom.workspace = true
prost.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-prost.workspace = true

[build-dependencies]
prost-build = "0.14.4"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.6"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
