[package]
name = "file-peeker-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "file-peeker"
path = "src/main.rs"

[dependencies]
file-peeker-client = { path = "../file-peeker-client" }
ratatui.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
