[package]
name = "file-peeker-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
crossterm.workspace = true
file-peeker-client = { path = "../file-peeker-client" }
futures.workspace = true
ratatui.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "file-peeker"
path = "src/main.rs"

[lints]
workspace = true
